Image Alignment Fix

--- a/styles.css
+++ b/styles.css
@@ -115,7 +115,7 @@ li a:hover{
 h1{text-align: center;}
 
 .floatDiv {
-    float: left;
+    display: inline-block;
     max-width: 30%;
     min-width: 550px;
     overflow: wrap;
@@ -125,8 +125,8 @@ h1{text-align: center;}
 
 body{
 margin-top: 40px;
-margin-left: 100px;
-margin-right: 100px;
+margin-left: 50px;
+margin-right: 50px;
 font-family: Arial;
 font-size: 20px;
 }
@@ -145,6 +145,6 @@ img {
 
 .mainContent {
     display: block;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
